@startuml
set namespaceSeparator ::

class "bootsttrap_fulltest::app::shared::app_vars.dart::Environment" {
  +int index
  {static} +List<Environment> values
  {static} +Environment dev
  {static} +Environment staging
  {static} +Environment prod
  {static} +Environment vizstory
}

"bootsttrap_fulltest::app::shared::app_vars.dart::Environment" o-- "bootsttrap_fulltest::app::shared::app_vars.dart::Environment"

class "bootsttrap_fulltest::app::shared::app_vars.dart::Constants" {
  -Map<String, dynamic> _config
  +dynamic whereAmI
  +void setEnvironment()
  +bool isDev()
}

class "bootsttrap_fulltest::app::shared::app_vars.dart::_Config" {
  {static} +Map<String, dynamic> debugConstants
  {static} +Map<String, dynamic> prodConstants
  {static} +Map<String, dynamic> qaConstants
  {static} +Map<String, dynamic> visstoryConstants
  {static} +String whereAmI
}

class "bootsttrap_fulltest::app::ui::myapp.dart::MyApp" {
  +MyHomePage? home
  +Widget build()
}

"bootsttrap_fulltest::app::ui::myapp.dart::MyApp" o-- "bootsttrap_fulltest::app::ui::screens::home::myhomepage.dart::MyHomePage"

class "bootsttrap_fulltest::app::ui::screens::home::myhomepage.dart::MyHomePage" {
  +String title
  +String message
  {static} +Key titleKey
  {static} +Key messageKey
  +State<MyHomePage> createState()
}

"bootsttrap_fulltest::app::ui::screens::home::myhomepage.dart::MyHomePage" o-- "flutter::src::foundation::key.dart::Key"

class "bootsttrap_fulltest::app::ui::screens::home::myhomepage.dart::_MyHomePageState" {
  -int _counter
  -void _incrementCounter()
  +Widget build()
}


@enduml